Updated book. Added build target for HTML using HeVeA.

--- a/doc/book/basics.tex
+++ b/doc/book/basics.tex
@@ -296,7 +296,7 @@ grp->appendMailbox(mbox2);
 
 \begin{figure}[ht!]
 	\center\includegraphics[width=0.7\textwidth]
-		{images/address-mailbox-mailboxgroup.png}
+		{images/address-mailbox-mailboxgroup.png}\endcenter
 	\caption{Diagram for address-related classes}
 	\label{uml_addr_mbox_mboxgroup}
 \end{figure}
@@ -314,7 +314,7 @@ model is implemented in VMime, and all classes that take part in it.
 
 \begin{figure}
 	\center\includegraphics[width=1.0\textwidth]
-		{images/message-body-header.png}
+		{images/message-body-header.png}\endcenter
 	\caption{Overall structure of MIME messages}
 	\label{uml_msg_body_header}
 \end{figure}
