--- a/doc/book/net.tex
+++ b/doc/book/net.tex
@@ -15,7 +15,7 @@ chapter, so it is important you take some time to read it.
 
 \begin{figure}
 	\center\includegraphics[width=0.9\textwidth]
-		{images/messaging-services.png}
+		{images/messaging-services.png}\endcenter
 	\caption{Overall structure of the messaging module}
 	\label{uml_messaging_module}
 \end{figure}
