Fixed and clarified text about handleTimeout() return value.

--- a/doc/book/net.tex
+++ b/doc/book/net.tex
@@ -703,9 +703,11 @@ class timeoutHandler : public object
 While the operation runs, the service calls {\vcode isTimeout()} at variable
 intervals. If the {\vcode isTimeout()} function returns {\vcode true},
 then {\vcode handleTimeout()} is called. If the {\vcode handleTimeout()}
-function also returns {\vcode true}, the
-operation is cancelled and an {\vcode operation\_timed\_out} exception is
-thrown. The function {\vcode resetTimeout()} is called each time data has
+function returns {\vcode false}, the operation is cancelled and
+an {\vcode operation\_timed\_out} exception is thrown. Else, if
+{\vcode handleTimeout()} returns true, the operation continues and the
+time-out count is reset.
+The function {\vcode resetTimeout()} is called each time data has
 been received from the server to reset time-out delay.
 
 The following example shows how to implement a simple time-out handler:
