--- a/AUTHORS
+++ b/AUTHORS
@@ -28,7 +28,7 @@ AUTHORS file.
  - Zarafa <http://developer.zarafa.com/VmimePatches>
  - Bartek Szurgot <vempirelord@wp.pl, http://baszerr.org>
  - Achim Brandt <http://sourceforge.net/users/a-brandt/>
- - Mehmet Bozkurt <mehmet.bozkurt78@gmail.com> (OpenSSL support)
+ - Mehmet Bozkurt <mehmet.bozkurt78@gmail.com> (OpenSSL support, ICU support)
 
 Please apologize if I have forgotten someone here.  ;)  Send me an email
 to <vincent@vmime.org> if you want your name to be listed.
