Issue #36: added support for wildcard in Common Name when verifying host name (thanks to Anthony Dervish).

--- a/AUTHORS
+++ b/AUTHORS
@@ -29,6 +29,7 @@ AUTHORS file.
  - Bartek Szurgot <vempirelord@wp.pl, http://baszerr.org>
  - Achim Brandt <http://sourceforge.net/users/a-brandt/>
  - Mehmet Bozkurt <mehmet.bozkurt78@gmail.com> (OpenSSL support, ICU support)
+ - Anthony Dervish <antmd@mac.com>
 
 Please apologize if I have forgotten someone here.  ;)  Send me an email
 to <vincent@vmime.org> if you want your name to be listed.
